--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,12 @@
 [metadata]
 name = converter
 version = attr: converter.__version__.__version__
+description = Tool to convert Python code to work with older versions
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = nahco314
+author_email = nahco3_ta@yahoo.co.jp
+license = MIT
 
 [options]
 python_requires = >=3.10
