Corrected a misspelled module name.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = converter
-version = attr: converter.__version__.__version__
+name = compatibilityer
+version = attr: compatibilityer.__version__.__version__
 description = Tool to convert Python code to work with older versions
 long_description = file: README.md
 long_description_content_type = text/markdown
