--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,7 @@ license = MIT
 python_requires = >=3.10
 packages = find:
 install_requires =
+
+[options.entry_points]
+console_scripts =
+    compatibilityer = compatibilityer.main:main
